--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 
 /* -------------break ------------------*/
-body {
+/* body {
     font-family: Rubik, sans-serif;
     margin: 0px;
 
@@ -106,5 +106,5 @@ div {
 }
 
 
-
+ */
 
